Implemented requested changes

--- a/validation/src/static/index.html
+++ b/validation/src/static/index.html
@@ -16,9 +16,9 @@
   <body>
     <div class="content">
       <!-- Title -->
-      <header class="titleContainer">
+      <heading class="titleContainer">
         <h1 class="title">AccName Comparison</h1>
-      </header>
+      </heading>
       <section class="introTextContainer">
         <h2 class="introText">
           Run comparison on <button class="chooseComparisonBtn" onclick="toggleComparisonSectionVisibility('snippetComparison', this);">HTML Snippet</button>
