--- a/validation/src/static/index.html
+++ b/validation/src/static/index.html
@@ -1,9 +1,103 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="/static/styles/index.css"/>
+    <meta charset="utf-8">
+    <title>AccName Comparison</title>
+    <!-- External dependencies -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.29.0/codemirror.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.29.0/codemirror.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.29.0/mode/xml/xml.js"></script>
+    <!-- Local dependencies -->
+    <link rel="stylesheet" href="/static/styles/index.css">
+    <link rel="stylesheet" href="/static/styles/spinner.css">
     <script src="/static/scripts/index.js"></script>
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <div class="content">
+      <!-- Title -->
+      <heading class="titleContainer">
+        <h1 class="title">AccName Comparison</h1>
+      </heading>
+      <section class="introTextContainer">
+        <h2 class="introText">
+          Run comparison on <button class="chooseComparisonBtn" onclick="toggleComparisonSectionVisibility('snippetComparison', this);">HTML Snippet</button>
+          or <button class="chooseComparisonBtn" onclick="toggleComparisonSectionVisibility('urlComparison', this);">Web-Page</button>
+        </h2>
+      </section>
+      <!-- Snippet comparison -->
+      <section id="snippetComparison" class="hidden comparisonSection">
+        <div id="runComparisonInputSection">
+          <heading class="instructionTextContainer">
+            <h3 class="heading">Enter HTML Snippet</h3>
+            <h4 class="bluetext" style="margin-bottom: 10px;">Mark target element with an 'ac' attribute</h4>
+          </heading>
+          <textarea id="snippetInput"></textarea>
+          <div class="runComparisonBtnContainer">
+            <button class="runComparisonBtn" onclick="getSnippetComparison();">Run Comparison</button>
+          </div>
+        </div>
+        
+        <section id="comparisonResultsContainer" aria-label="Comparison results">
+          <table id="resultsTable" class="hidden">
+            <colgroup>
+              <col span="1" style="width: 20%;">
+              <col span="1" style="width: 80%;">
+            </colgroup>
+            <tr>
+              <td class="implTitle">Chrome</td>
+              <td id="chromeAccName"></td>
+            <tr>
+            </tr>
+              <td class="implTitle">Axe</td>
+              <td id="axeAccName"></td>
+            <tr>
+            </tr>
+              <td class="implTitle">AOM</td>
+              <td id="aomAccName"></td>
+            <tr>
+            </tr>
+              <td class="implTitle">BG</td>
+              <td id="bgAccName"></td>
+            <tr>
+            </tr>
+              <td class="implTitle">AccName</td>
+              <td id="ourAccName"></td>
+            </tr>
+          </table>
+          <div id="snippetResults"></div>
+        </section>
+      </section>
+      <!-- URL comparison -->
+      <section id="urlComparison" class="hidden comparisonSection">
+        <div class="urlComparisonContainer">
+          <h3 class="heading">Enter Web-Page URL</h3>
+          <input id="urlInput" class="urlInput" type="url" placeholder="http://www.example.com/"/>
+          <div class="runComparisonBtnContainer">
+            <button class="runComparisonBtn" onclick="getURLComparison();">Run Comparison</button>
+          </div>
+          <div id="urlResults">
+          </div>
+        </div>
+      </section>
+      <!-- Comparison history -->
+      <section id="previewSection">
+        <h2 class="previewHeader">Comparison History</h2>
+        <div class="previewBody">
+          <section class="comparisonType">
+            <h3 class="comparisonTitle">HTML Snippets</h3>
+            <h4 class="comparisonKey">Case ID<span>(target Element role)</span></h4>
+            <div id="snippetPreviews" class="previewCardContainer">
+            </div>
+          </section>
+          <section class="comparisonType">
+            <h3 class="comparisonTitle">Web-Pages</h3>
+            <h4 class="comparisonKey">Target URL<span>disagreement%</span></h4>
+            <div id="summaryPreviews" class="previewCardContainer">
+            </div>
+          </section>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
