Added case page & favicon

--- a/validation/src/static/index.html
+++ b/validation/src/static/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.29.0/codemirror.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.29.0/mode/xml/xml.js"></script>
     <!-- Local dependencies -->
+    <script src="/static/scripts/util.js"></script>
     <link rel="stylesheet" href="/static/styles/index.css">
     <link rel="stylesheet" href="/static/styles/spinner.css">
     <script src="/static/scripts/index.js"></script>
