Implemented requested changes

--- a/validation/src/static/index.html
+++ b/validation/src/static/index.html
@@ -18,7 +18,9 @@
     <div class="content">
       <!-- Title -->
       <heading class="titleContainer">
-        <h1 class="title">AccName Comparison</h1>
+        <h1 class="title">
+          AccName Comparison
+        </h1>
       </heading>
       <section class="introTextContainer">
         <h2 class="introText">
